--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,8 @@ body {
 }
 
 .col-3 {
-    width: 25%;
+    width: auto;
+    margin-left: 2%;
 }
 
 .col-4 {
@@ -275,6 +276,7 @@ h1 {
 .horario{
     width: 80%;
     margin: 0 auto;
+    background-color: rgb(255, 255, 255);
 }
 .horario {
     text-align: center;
