--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ h1 {
     font-weight: bold;
 }
 #enlaces a{
-    color: blue;
+    color: rgb(156, 156, 192);
     text-decoration: underline;
     font-size: 24px;
 }
