--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ h1 {
     font-weight: bold;
 }
 .atributo {
-    color: green;
+    color: rgb(148, 235, 148);
     font-size: 28px;
     font-weight: bold;
 }
