--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,8 @@ body {
 .shadow {
     box-shadow: 0 0 20px rgba(220, 220, 220, 0.26);
     border-radius: 10px;
+    position: relative;
+    z-index: 9999;
 }
 nav ul{
     padding: 0;
